<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.es.easysupervise.activity.ForgetPwdActivity">

    <include layout="@layout/navigationbar"/>

    <LinearLayout
        android:id="@+id/llVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        >
        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:paddingLeft="10dp"
            android:background="@drawable/corner_normal_bg"
            android:hint="@string/INPUTPHONE"
            android:textColorHint="@color/textcolorhint"
            android:textColor="@color/textcolorhint"
            android:inputType="number"
            android:textSize="17sp"
            android:typeface="sans"
            />
        <RelativeLayout
            android:id="@+id/rlCode"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/edtPhone"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"

            >

            <EditText
                android:id="@+id/edtVerifyCode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/corner_normal_bg"
                android:hint="@string/INPUTVERIFYCODE"
                android:textColorHint="@color/textcolorhint"
                android:paddingLeft="10dp"
                android:textColor="@color/textcolorhint"
                android:inputType="number"
                android:textSize="17sp"
                android:typeface="sans"
                />

            <Button
                android:id="@+id/btnGetVerifyCode"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/btn_getverifycode"
                android:text="@string/BTNGETVERIFYCODE"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="10dp"
                android:typeface="sans"
                />
        </RelativeLayout>
        <Button
            android:id="@+id/btnNext"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/btn_login_bg"
            android:text="@string/NEXTSTEP"
            android:typeface="sans"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llInputPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        >
        <EditText
            android:id="@+id/edtPwd1"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:paddingLeft="10dp"
            android:background="@drawable/corner_normal_bg"
            android:hint="@string/EDTPWD"
            android:textColorHint="@color/textcolorhint"
            android:password="true"
            android:textColor="@color/textcolorhint"
            android:textSize="17sp"
            android:typeface="sans"
            />
        <RelativeLayout
            android:id="@+id/rlPwd"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/edtPhone"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            >

            <EditText
                android:id="@+id/edtPwd2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/corner_normal_bg"
                android:hint="@string/EDTPWD2"
                android:textColorHint="@color/textcolorhint"
                android:paddingLeft="10dp"
                android:password="true"
                android:textColor="@color/textcolorhint"
                android:textSize="17sp"
                android:typeface="sans"
                />

            <ImageView
                android:id="@+id/imgShowPwd"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/pwdhide"
                />
        </RelativeLayout>
        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/btn_login_bg"
            android:text="@string/MAKESURE"
            android:typeface="sans"
            />
    </LinearLayout>

</LinearLayout>
