<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/item_bgcolor"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        >
        <ImageView
            android:id="@+id/imgHead"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/circle_head"
            android:src="@drawable/headdefault"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvLevel"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="Level"
                android:textColor="@color/TEXT_VALUE"
                android:typeface="sans"
                />
            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="1866666666"
                android:textColor="@color/TEXT_VALUE"
                android:typeface="sans"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/lightblue"
        />
    <TextView
        android:id="@+id/tvMenu1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MENU1"
        android:textSize="17sp"
        android:drawableLeft="@drawable/menu1"
        android:textColor="@color/TEXT_TITLE"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:drawablePadding="5dp"
        android:typeface="sans"
        />
    <TextView
        android:id="@+id/tvMenu2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MENU2"
        android:textSize="17sp"
        android:drawableLeft="@drawable/menu2"
        android:textColor="@color/TEXT_TITLE"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:drawablePadding="5dp"
        android:typeface="sans"
        />
    <TextView
        android:id="@+id/tvMenu3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MENU3"
        android:textSize="17sp"
        android:drawableLeft="@drawable/menu3"
        android:textColor="@color/TEXT_TITLE"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:drawablePadding="5dp"
        android:typeface="sans"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/lightblue"
        />
    <TextView
        android:id="@+id/tvMenu4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MENU4"
        android:textSize="17sp"
        android:drawableLeft="@drawable/menu4"
        android:textColor="@color/TEXT_TITLE"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:drawablePadding="5dp"
        android:typeface="sans"
        />
    <TextView
        android:id="@+id/tvMenu5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MENU5"
        android:textSize="17sp"
        android:drawableLeft="@drawable/menu5"
        android:textColor="@color/TEXT_TITLE"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:drawablePadding="5dp"
        android:typeface="sans"
        />
    <TextView
        android:id="@+id/tvMenu6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MENU6"
        android:textSize="17sp"
        android:drawableLeft="@drawable/menu6"
        android:textColor="@color/TEXT_TITLE"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:drawablePadding="5dp"
        android:typeface="sans"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/lightblue"
        />
    <TextView
        android:id="@+id/tvMenu7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MENU7"
        android:textSize="17sp"
        android:drawableLeft="@drawable/collection"
        android:textColor="@color/TEXT_TITLE"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:drawablePadding="5dp"
        android:typeface="sans"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/menupic"

        />




</LinearLayout>
