<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llHomeNav"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="horizontal"
    android:background="@color/white"
    >
    <ImageView
        android:id="@+id/imgNavLeft"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@drawable/nav_menu"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        />
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="8"
        >
        <TextView
            android:id="@+id/tvNavCollect"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="14sp"
            android:typeface="sans"
            android:gravity="center"
            android:text="@string/NAVCOLLECT"
            android:background="@drawable/nav_selected_bg"
            android:textColor="@color/MAINNAVTAB_HILIGHT"
            />
        <TextView
            android:id="@+id/tvNavSupervise"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/tvNavCollect"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="14sp"
            android:typeface="sans"
            android:gravity="center"
            android:text="@string/NAVSUPERVISE"
            android:textColor="@color/MAINNAVTAB_NORMAL"
            />
        <TextView
            android:id="@+id/tvNavSearch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/tvNavSupervise"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="14sp"
            android:typeface="sans"
            android:gravity="center"
            android:text="@string/NAVSEARCH"
            android:textColor="@color/MAINNAVTAB_NORMAL"
            />

        <TextView
            android:id="@+id/tvNavMakesure"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/tvNavSearch"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="14sp"
            android:gravity="center"
            android:typeface="sans"
            android:text="@string/NAVMAKESURE"
            android:textColor="@color/MAINNAVTAB_NORMAL"
            />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imgNavRight"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:src="@drawable/nav_location"
        android:visibility="invisible"
        />

</LinearLayout>
